--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,9 @@ dependencyResolutionManagement {
 }
 rootProject.name = "CaloryTracker"
 include ':app'
+include ':tracker:tracker_domain'
+include ':tracker:tracker_data'
+include ':tracker:tracker_presentation'
+include ':onboarding:onboarding_domain'
+include ':onboarding:onboarding_presentation'
+include ':core'
