--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,4 @@ include ':tracker:tracker_presentation'
 include ':onboarding:onboarding_domain'
 include ':onboarding:onboarding_presentation'
 include ':core'
+include ':core_ui'
